--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/WmFPNRd">official discord server here!</a></span></em></p>
 <hr />
-<p style="text-align: center;"><span style="color: #ff0000;">Please note this program is not an actual OS and it can't be booted as an image. It's just for fun. Also, it is currently in beta, so stay with us and maybe give some ideas on our discord server. <span style="background-color: #ffffff;">Thanks! </span></span></p>
+<p style="text-align: center;"><span style="color: #ff0000;">Please note this program is not an actual OS and it can't be booted as an actual computer OS. It's just for fun. Also, it is currently in beta, so stay with us and maybe give some ideas on our discord server. <span style="background-color: #ffffff;">Thanks! </span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">Contact : birbdevs@gmail.com</span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">&nbsp;</span></span></p>
 <p>&nbsp;</p>
