update invite link on website (again)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Visit the <span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://github.com/BirbOSDev/BirbOS"><em>Github repository here!</em></a></span></p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/yES5pXG">official Discord server here!</a></span></em></p>
+<p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/Cp2f8CG">official Discord server here!</a></span></em></p>
 <hr />
 <p style="text-align: center;"><span style="color: #ff0000;">Please note this program is not an actual OS and it can't be booted as a computer OS. It's just for fun. Also, it is currently in beta, so stay with us and maybe give some ideas on our discord server. <span style="background-color: #ffffff;">Thanks! </span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">Contact : birbdevs@gmail.com</span></span></p>
