--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<h1 style="padding-left: 60px; text-align: center;"><em>The BirbOS&trade; official website.</em><img src="https://cdn.discordapp.com/icons/526493891180888074/7bd4acadd63bbee588ab7e19abd43c33.png" alt="" width="39" height="39" /></h1>
+<h1 style="padding-left: 60px; text-align: center;"><em>The BirbOS&trade; official website.</em><img src="https://cdn.discordapp.com/attachments/526493891180888076/544163771019690005/1_Birb_Logo.png" alt="" width="39" height="39" /></h1>
 <hr />
 <p style="text-align: center;">BirbOS is a Batch "OS" developed by xandrei, Dukemz and Ad2017.</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Visit the <span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://github.com/BirbOSDev/BirbOS"><em>Github repository here!</em></a></span></p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/Cp2f8CG">official Discord server here!</a></span></em></p>
+<p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/Cp2f8CG">official Discord server here! (NOT WORKING NOW) </a></span></em></p>
 <hr />
 <p style="text-align: center;"><span style="color: #ff0000;">Please note this program is not an actual OS and it can't be booted as a computer OS. It's just for fun. Also, it is currently in beta, so stay with us and maybe give some ideas on our discord server. <span style="background-color: #ffffff;">Thanks! </span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">Contact : birbdevs@gmail.com</span></span></p>
