--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p style="text-align: center;">Visit the <span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://github.com/BirbOSDev/BirbOS"><em>Github repository here!</em></a></span></p>
 <p style="text-align: center;"><strong>UPDATE:</strong>&nbsp;We've got a C++ version now! Click <a href="https://github.com/BirbOSDev/BirbOS-CPP">here</a></p>
 <p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/zwHZwb3">official Discord server here!</a></span></em></p>
-<p style="text-align: center;"><strong>HOW TO COMPILE</strong>: You don't compile it! Just clone the batch repo and it's ready to go!</p>
+<p style="text-align: center;"><strong>HOW TO COMPILE</strong> (the batch version) : You don't compile it! Just clone the batch repo and it's ready to go!</p>
 <hr />
 <p style="text-align: center;"><span style="color: #ff0000;">Please note this program is not an actual OS and it can't be booted as a computer OS. It's just for fun. Also, it is currently in beta, so stay with us and maybe give some ideas on our discord server. <span style="background-color: #ffffff;">Thanks!</span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">UPDATE: Samyocord (<a href="https://github.com/Samyocord">here</a>) has made BirbOS into a real bootable OS! <a href="https://github.com/Samyocord/BirbOS-OS">Check it here.</a></span></span></p>
