i can't connect to discord because of school wifi >:(
rip me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p style="text-align: center;"><strong>UPDATE:</strong>&nbsp;We've got a C++ version now! Click <a href="https://github.com/BirbOSDev/BirbOS-CPP/releases">here</a></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/zwHZwb3">official Discord server here!</a></span></em></p>
-<p style="text-align: center;">To get the batch version you just clone the <a href="https://github.com/BirbOSDev/BirbOS">repo</a>&nbsp;and run the "birbtool.cmd" file. Enjoy!</p>
+<p style="text-align: center;">To get the batch version you just download the <a href="https://github.com/BirbOSDev/BirbOS">repo</a>&nbsp;and run the "birbtool.cmd" file. Enjoy!</p>
 <hr />
 <p style="text-align: center;"><span style="color: #ff0000;">Please note this program is not an actual OS and it can't be booted as a computer OS. It's just for fun. Also, it is currently in beta, so stay with us and maybe give some ideas on our discord server. <span style="background-color: #ffffff;">Thanks!</span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">UPDATE: Samyocord (<a href="https://github.com/Samyocord">here</a>) has made BirbOS into a real bootable OS! <a href="https://github.com/Samyocord/BirbOS-OS">Check it here.</a></span></span></p>
