--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>BirbOS Website</title>
 <h1 style="padding-left: 60px; text-align: center;"><em>The BirbOS&trade; official website.</em><img src="https://cdn.discordapp.com/attachments/526493891180888076/544163771019690005/1_Birb_Logo.png" alt="" width="128" height="128" /></h1>
 <hr />
 <p style="text-align: center;">BirbOS is a Batch "OS" developed by xandrei, Dukemz and Ad2017.</p>
