--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">&nbsp;</span></span></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<h2>UPDATE: BirbOS has been discontinued and the Discord Server has been deleted. Contact Dukemz#7766 for more info.</h2>
+<strike><h2>UPDATE: BirbOS has been discontinued and the Discord Server has been deleted. Contact Dukemz#7766 for more info.</h2></strike><h1>DOWNLOAD FREE NOW!</h1>
