--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h1 style="padding-left: 60px; text-align: center;"><em>The BirbOS&trade; official website.</em><img src="https://cdn.discordapp.com/attachments/526493891180888076/544163771019690005/1_Birb_Logo.png" alt="" width="128" height="128" /></h1>
 <hr />
-<a href="https://www.youtube.com/watch?v=z7QzLIaDbOY">INSTALL TUTORIALE</a>
+<a href="https://www.youtube.com/watch?v=z7QzLIaDbOY">INSTALL TUTORIAL</a>
 <p style="text-align: center;">BirbOS is a Batch "OS" developed by xandrei, Dukemz and Ad2017.</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Visit the <span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://github.com/BirbOSDev/BirbOS"><em>Github repository here!</em></a></span></p>
 <p style="text-align: center;"><strong>UPDATE:</strong>&nbsp;We've got a C++ version now! Click <a href="https://github.com/BirbOSDev/BirbOS-CPP/releases">here</a></p>
-<p style="text-align: center;">yeah for birbOS part 2 check&nbsp;<a href="https://gitlab.com/bird-bean-devs/birbos2">this out</a>&nbsp;(gitlab)</p>
+<!-- <p style="text-align: center;">yeah for birbOS part 2 check&nbsp;<a href="https://gitlab.com/bird-bean-devs/birbos2">this out</a>&nbsp;(gitlab)</p>-->
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Join the <em><span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://discord.gg/zwHZwb3">official Discord server here! (it's deleted)</a></span></em></p>
 <p style="text-align: center;">To get the batch version you just download the <a href="https://github.com/BirbOSDev/BirbOS">repo</a>&nbsp;and run the "birbtool.cmd" file. Enjoy!</p>
