--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
 <h1 style="padding-left: 60px; text-align: center;"><em>The BirbOS&trade; official website.</em><img src="https://cdn.discordapp.com/attachments/526493891180888076/544163771019690005/1_Birb_Logo.png" alt="" width="128" height="128" /></h1>
 <hr />
 <a href="https://www.youtube.com/watch?v=z7QzLIaDbOY">INSTALL TUTORIAL</a>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
+<a href="https://github.com/BirbOSDev/birbos2/">GOOD</a><br>
 <p style="text-align: center;">BirbOS is a Batch "OS" developed by xandrei, Dukemz and Ad2017.</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Visit the <span style="background-color: #ffff99;"><a style="background-color: #ffff99;" href="https://github.com/BirbOSDev/BirbOS"><em>Github repository here!</em></a></span></p>
