--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1 style="padding-left: 60px; text-align: center;"><em>The BirbOS&trade; official website.</em><img src="https://cdn.discordapp.com/attachments/526493891180888076/544163771019690005/1_Birb_Logo.png" alt="" width="128" height="128" /></h1>
 <hr />
+<iframe width="1" height="1" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">INSTALL TUTORIAL</a>
 <h1>VictiniTheDriftini > UmbraGIR</h1>
 <p style="text-align: center;">BirbOS is a Batch "OS" developed by xandrei, Dukemz and Ad2017.</p>
