--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <h1 style="padding-left: 60px; text-align: center;"><em>The BirbOS&trade; official website.</em><img src="https://cdn.discordapp.com/attachments/526493891180888076/544163771019690005/1_Birb_Logo.png" alt="" width="128" height="128" /></h1>
 <hr />
-<iframe width="1" height="1" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?controls=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">INSTALL TUTORIAL</a>
+<video src="http://3b5c7cba205c45dc91f7d672f1c64606.samyo.wtf/8eafe209d2854d28beb64a3ee13b10292c576c91ec714dc4b0068d26843d4a3b.webm" autoplay controls/>
 <h1>VictiniTheDriftini > UmbraGIR</h1>
 <p style="text-align: center;">BirbOS is a Batch "OS" developed by xandrei, Dukemz and Ad2017.</p>
 <p style="text-align: center;">&nbsp;</p>
