--- a/index.html
+++ b/index.html
@@ -16,4 +16,7 @@
 <h2>birbos is back in development</h2>
 <h1>DOWNLOAD FREE NOW! pls do</h1>
 <hr />
+<center>
+  <h1>Installation Tutoriale</h1>
 <video src="http://3b5c7cba205c45dc91f7d672f1c64606.samyo.wtf/8eafe209d2854d28beb64a3ee13b10292c576c91ec714dc4b0068d26843d4a3b.webm" autoplay controls/>
+</center>
