--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">UPDATE: Samyocord (<a href="https://github.com/Samyocord">here</a>) has made BirbOS into a real bootable OS! <a href="https://github.com/Samyocord/BirbOS-OS">Check it here.</a></span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">Contact : birbdevs@gmail.com</span></span></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><span style="background-color: #ffffff;">&nbsp;</span></span></p>
-<h2>birbos is back in development</h2>
+<h2>please help me i am dying</h2>
 <h1>DOWNLOAD FREE NOW! pls do</h1>
 <hr />
 <center>
